--- a/style.css
+++ b/style.css
@@ -212,10 +212,9 @@ section .title::after{
     width: 45%;
 }
 .about .about-content .left img{
-    height: 400px;
-    width: 400px;
-    object-fit: cover;
-    border-radius: 6px;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 .about .about-content .right{
     width: 55%;
