--- a/style.css
+++ b/style.css
@@ -212,11 +212,10 @@ section .title::after{
     width: 45%;
 }
 .about .about-content .left img{
-    height: 100%; /* Adjust based on container size */
-    width: 100%; /* Adjust based on container size */
     height: 400px;
     width: 400px;
-    object-fit: cover;
+    object-fit: contain; /* Ensures the whole image fits without cropping */
+    object-position: top; /* Aligns the image to the top of the container */
     border-radius: 6px;
 }
 .about .about-content .right{
